--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="fullname">fullname</string>
     <string name="email">email</string>
     <string name="profileUrl">profileUrl</string>
+    <string name="authToken">authToken</string>
 
 </resources>
